[package]
name = "neust"
version = "0.0.1"
authors = ["unbyte <i@shangyes.net>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/neucn/neust"
repository = "https://github.com/neucn/neust.git"
description = "NEU passport binding for Rust."
license = "MIT"
documentation = "https://docs.rs/neust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
thiserror = "1.0"
regex = "1.5"
lazy_static = "1.4"
async-trait = "0.1"
sealed = "0.4"

reqwest = { version = "0.11", default-features = false, features = ["cookies"] }

aes = { version = "0.8", optional = true }
cfb-mode = { version = "0.8", optional = true }
hex = { version = "0.4", optional = true }

rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1.16", default-features = false, features = ["macros"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
json = ["reqwest/json"]
wechat = ["rand"]
webvpn = ["aes", "cfb-mode", "hex"]

