[package]
name = "wechat"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", default-features = false, features = ["macros", "rt-multi-thread"] }
neust = { path = "../../", features = ["wechat"] }
